<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_operator_couriers"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right"
    tools:context=".OperatorCouriersFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minWidth="50dp"
            android:minHeight="50dp">

            <TextView
                android:id="@+id/labelNewCourier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/golos_medium"
                android:letterSpacing="0"
                android:text="@string/labelNewCourier"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconAddNewCourier"
                app:layout_constraintTop_toTopOf="@+id/iconAddNewCourier" />

            <TextView
                android:id="@+id/labelCourierList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/golos_medium"
                android:letterSpacing="0"
                android:text="@string/tvCourierList"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconCourierList"
                app:layout_constraintTop_toTopOf="@+id/iconCourierList" />

            <ImageView
                android:id="@+id/iconAddNewCourier"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/iconaddnewcourier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconCourierList"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/iconcourierlist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconAddNewCourier" />

            <TextView
                android:id="@+id/tvCreateNewCourier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:clickable="true"
                android:fontFamily="@font/golos_medium"
                android:foregroundGravity="left"
                android:gravity="left"
                android:text="@string/tvCreateNewCourier"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/iconAddNewCourier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconAddNewCourier"
                app:layout_constraintTop_toBottomOf="@+id/labelNewCourier" />

            <TextView
                android:id="@+id/tvCourierList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/golos_medium"
                android:foregroundGravity="left"
                android:gravity="left"
                android:text="@string/labelCourierList"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/iconCourierList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconCourierList"
                app:layout_constraintTop_toBottomOf="@+id/labelCourierList" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>