<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_Operator_Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_operator_login">

    <TextView
        android:id="@+id/textSoftUserOperatorLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/labelLoginOperator"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginLogo" />

    <TextView
        android:id="@+id/textLoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/logo"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/companyName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/companyName"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="130dp"
        android:width="200dp"
        android:fontFamily="@font/golos_medium"
        android:text="Войти"
        app:layout_constraintBottom_toTopOf="@+id/companyName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Code_Operator_Login" />

    <EditText
        android:id="@+id/edit_Email_Operator_Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/golos_medium"
        android:hint="Введите email"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginLogo" />

    <EditText
        android:id="@+id/edit_Password_Operator_Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/golos_medium"
        android:hint="Введите пароль"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Email_Operator_Login" />

    <EditText
        android:id="@+id/edit_Code_Operator_Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/golos_medium"
        android:hint="Введите код оператора"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Password_Operator_Login" />

</androidx.constraintlayout.widget.ConstraintLayout>